# ComfyUI-AI2Go-Utils

./: .gitignore  README.md  __init__.py  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: close-prs.yml  publish.yml
Tasks/: deep-research-report.md
docs/superpowers/plans/: 2026-07-12-save-civitai-metadata.md  2026-07-15-resolution-selector-profiles-flip.md
docs/superpowers/specs/: 2026-07-12-save-civitai-metadata-design.md  2026-07-15-resolution-selector-profiles-flip-design.md
nodes/: __init__.py  ideogram4_nodes.py  ideogram4_style_wizard.py  prompt_batch.py  prompt_batch_core.py  resolution_core.py  resolution_selector.py  save_civitai_metadata.py
nodes/civitai_metadata/: __init__.py  a1111.py  filenames.py  hashing.py  png_info.py  sampler_names.py  tracer.py
tests/: test_a1111.py  test_filenames.py  test_hashing.py  test_nodes_integration.py  test_png_info.py  test_prompt_batch_core.py  test_resolution_core.py  test_sampler_names.py  test_tracer_model.py  test_tracer_prompts.py  test_tracer_sampler.py
web/js/: ideogram4_prompt_builder.js  ideogram4_style_wizard.js  prompt_batch.js  resolution_selector.js  save_civitai_metadata.js  utility.js
