[project]
name = "comfyui-ai2go-utils"
description = "ComfyUI utility nodes by AIKnowledge2Go."
version = "1.0.2"
license = { file = "LICENSE" }
dependencies = [
    "pillow>=10.3.0",
]

[project.urls]
Repository = "https://github.com/Little-God1983/ComfyUI-AI2Go-Utils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "littlegod"
DisplayName = "ComfyUI-AI2Go-Utils"
Icon = ""
Banner = "https://raw.githubusercontent.com/Little-God1983/ComfyUI-AI2Go-Utils/main/assets/AI2Go-Banner.jpg"
